Remove PhoneListener and use audio focus change